Uploading Files and Challenge

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- this is where you build the webpage -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,22 +49,22 @@
                         <!-- city field -->
                         <li class="list-group-item bg-dark">
                             <label for="city">Enter City</label>
-                            <input type="text" placeholder="Berkeley" id="city" />
+                            <input type="text" placeholder="San Francisco" id="city" />
                         </li>
                         <!-- state field -->
                         <li class="list-group-item bg-dark">
                             <label for="state">Enter State</label>
-                            <input type="text" placeholder="ca" id="state" />
+                            <input type="text" placeholder="CA" id="state" />
                         </li>
                         <!-- country field -->
                         <li class="list-group-item bg-dark">
                             <label for="country">Enter Country</label>
-                            <input type="text" placeholder="us" id="country" />
+                            <input type="text" placeholder="U.S.A." id="country" />
                         </li>
                         <!-- shape field -->
                         <li class="list-group-item bg-dark">
                             <label for="shape">Enter Shape</label>
-                            <input type="text" placeholder="fireball" id="shape" />
+                            <input type="text" placeholder="Circle" id="shape" />
                         </li>
                     </ul>
                 </form>
